Z-index issues.

--- a/css/bigsdb.css
+++ b/css/bigsdb.css
@@ -65,7 +65,7 @@ div.listpanel {padding:1em 1em 0 2em}
 ul.infopanel,div.infopanel{background:#f6f6f6;padding:1em 1em 0 2em;border:1px dashed #888}
 table {font-size: 1em;border-spacing:1px}
 
-a {color:#00b;text-decoration:none;z-index:9}
+a {color:#00b;text-decoration:none}
 a.hideshow,a.showhide {cursor:pointer}
 a:hover {color:#000;text-decoration:underline}
 
@@ -83,7 +83,7 @@ select.fieldlist{max-width:12em}
 .value_entry{min-width:12em}
 .allele_entry{min-width:10em}
 .int_entry{width:5em}
-input {font-size: 1em;z-index:9}
+input {font-size: 1em}
 
 sub, sup {
 	font-size: 75%;
@@ -390,7 +390,7 @@ div.main_container {
 }
 div.main_content {
 	position:relative;
-	width:calc(100vw - 20px - (100vw - 100%))
+	width:calc(100vw - 20px - (100vw - 100%));
 }
 @media only screen and (max-width:800px){
 	div.main_content {width:calc(100vw - 10px - (100vw - 100%))}
@@ -707,7 +707,6 @@ div#bookmark_panel {
 	background: #e0d5e0;
 	background-image: linear-gradient(#e0d5e0, #f0f0f0 5em);
 	box-shadow: 3px 3px 3px #aaa;
-	z-index:9
 }
 
 a#close_bookmark {
@@ -787,8 +786,8 @@ div.curategroup_schemes {background-image: linear-gradient(#fff,#cbe)}
 div.curategroup_sets {background-image: linear-gradient(#fff,#bce)}
 div.curategroup_geocoding {background-image: linear-gradient(#fff,#cce)}
 
-div.queryform, div#queryform {position:relative;background:#e8e8e8;z-index:0}
-div#queryform li,p,dd {position:relative;z-index:3}
+div.queryform, div#queryform {position:relative;background:#e8e8e8}
+div#queryform li,p,dd {position:relative}
 div#queryform table {border-collapse:collapse;border-spacing:0}
 div#queryform table.queryform {border-collapse:separate;border-spacing:1px}
 div#queryform table.queryform td {padding:0}
@@ -810,9 +809,9 @@ div.statusgood_no_resize {background:#d5e0d5;color:#008000}
 div#warning {background:#e0a0a0;color:#000000}
 div#resultsheader, div.resultsheader {background:#d5e0d5;padding:1em}
 div#resultsfooter, div.resultsfooter {background:#d5e0d5;padding:1em}
-div#resultstable, div.resultstable {position:relative;background:#e0e0e0;z-index:-1}
+div#resultstable, div.resultstable {position:relative;background:#e0e0e0}
 div#resultspanel, div.resultspanel {position:relative;background:#eceef1}
-div#resultspanel li,p,dd {position:relative;z-index:3}
+div#resultspanel li,p,dd {position:relative}
 div#alleles {background:#e0e0f0}
 div#alleles table {border-spacing:1px}
 div.scrollable {overflow-x:auto;padding-top:0.2em}
@@ -840,7 +839,6 @@ div#menubutton {
 	position:absolute;
 	top:1px;
 	right:5px;
-	z-index:3	
 }
 
 div#menubutton a  {
@@ -863,7 +861,6 @@ div#menupanel {
 	top:23px;
 	right:0px;
 	padding:1em;
-	z-index:10;		
 	border-radius:10px;
 	border:1px solid #ccc;
 	box-shadow:3px 3px 3px #dfdfdf;
@@ -877,7 +874,6 @@ div#curatetools {
 	position:absolute;
 	top:8em;
 	right:5px;
-	z-index:9;
 	padding:10px;
 	font-size:1em;
 	margin-bottom: 0.5em;
@@ -895,7 +891,6 @@ div.floatmenu {
 	border:1px solid #d0d0d0;	
 	background:#c0c0c0;
 	color:white;
-	z-index:3;
 }
 
 div.floatmenu a {
@@ -1272,11 +1267,11 @@ button.plugin:hover {color:#c8c}
 .filetype-text {color:white;font-size:0.7em;font-weight:700;font-family:Sans-Serif}
 
 .form_icon {display:inline;position:absolute;right:0;margin: 0.5em 1em}
-.form_icon_main {color:#bbb;background:transparent;z-index:1}
-.form_icon_plus {color:#7a7;top:-0.5em;text-shadow:0px 0px 10px #fff;z-index:2}
-.form_icon_edit {color:#77a;top:-0.5em;text-shadow:0px 0px 10px #fff;z-index:2}
-.form_icon_trash {color:#a77;top:-0.5em;text-shadow:0px 0px 10px #fff;z-index:2}
-.form_icon_scan {color:#99c;top:-0.5em;text-shadow:0px 0px 10px #fff;z-index:2}
+.form_icon_main {color:#bbb;background:transparent}
+.form_icon_plus {color:#7a7;top:-0.5em;text-shadow:0px 0px 10px #fff}
+.form_icon_edit {color:#77a;top:-0.5em;text-shadow:0px 0px 10px #fff}
+.form_icon_trash {color:#a77;top:-0.5em;text-shadow:0px 0px 10px #fff}
+.form_icon_scan {color:#99c;top:-0.5em;text-shadow:0px 0px 10px #fff}
 .form_icon > .fa-stack > .fa-users {font-size:1.7em}
 
 
@@ -1284,7 +1279,7 @@ button.plugin:hover {color:#c8c}
 	.form_icon {display:none}
 }
 
-.curate_icon_highlight {position:absolute;font-size:2em;text-shadow:0px 0px 10px #fff;z-index:2}
+.curate_icon_highlight {position:absolute;font-size:2em;text-shadow:0px 0px 10px #fff}
 .curate_icon_link:hover .curate_icon_highlight{text-shadow:0px 0px 10px red}
 .curate_icon_plus {color:#080}
 .curate_icon_query {color:#44a}
@@ -1330,7 +1325,6 @@ a.slide_trigger {
 	max-height:80%;
 	padding:1em;
 	background:#f0fff0;
-	z-index:99999;
 	border-radius:10px;
 	border:1px solid #ccc;
 	box-shadow:3px 3px 3px #dfdfdf;
